# 2022-GC-QuadTreeCompressor

./: CMakeLists.txt  README.md  decoder.cpp  encoder.cpp  main.cpp  readme.md  tree.cpp  tree.h
